# node-on-android

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/mafintosh/nodeonandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.js
app/src/main/assets/node/: index.js
app/src/main/cpp/: native-lib.cpp  native-lib.h
app/src/main/include/node/: common.gypi  config.gypi
app/src/main/java/com/mafintosh/nodeonandroid/: MainActivity.java  NodeService.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/mafintosh/nodeonandroid/: ExampleUnitTest.java
cli/: bin.js  index.js  package.json  whatever.keystore
example/: package.json
example/app/: index.js
gradle/wrapper/: gradle-wrapper.properties
